# pi-pico-co2-sensor

./: CMakeLists.txt
V1.00.00b/: CMakeLists.txt  main.cpp  sensirion_i2c.c  utils.c  utils.h
V1.00.00c/: CMakeLists.txt  const.h  main.c  sensirion_i2c.c  sensirion_i2c.h  utils.c  utils.h
V1.00.00c/Config/: CMakeLists.txt
V1.00.00c/Fonts/: CMakeLists.txt  fonts.h
V1.00.00c/GUI/: CMakeLists.txt
V1.00.00c/ePaper/: CMakeLists.txt  EPD_2in9bc.h  EPD_2in9d.c  EPD_2in9d.h
powerManagement/: CMakeLists.txt  main.c
